@@ -1,3 +1,8 @@
+2005-11-08  Roland Dreier  <roland@cisco.com>
+
+	* src/qp.c, src/verbs.c, src/mthca.h: Delegate setting of QP
+	capabilities (max_sge, max_inline_data, etc) to kernel.
+
 2005-11-04  Roland Dreier  <roland@cisco.com>
 
 	* src/verbs.c (mthca_destroy_qp): Clean CQEs when we destroy a QP.
